MAPREDUCE-1832. Merge -r 951232:951233 from trunk to branch-0.20.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.20@951238 13f79535-47bb-0310-9956-ffa450edef68